--- a/vite-chart/package.json
+++ b/vite-chart/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "antd": "^5.0.4",
     "echarts": "^5.4.0",
+    "echarts-wordcloud": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
