--- a/vite-chart/package.json
+++ b/vite-chart/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@ant-design/pro-components": "^2.3.46",
     "antd": "^5.0.4",
     "echarts": "^5.4.0",
     "echarts-wordcloud": "^2.1.0",
